16-ServicesIngressAndNetworkingFundamentals/07-AdvancedIngressTLSHostAndPathRules/host-path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routing-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api.example.com          # host-based routing
    http:
      paths:
      - path: /v1                  # path-based routing
        pathType: Prefix
        backend:
          service:
            name: api-v1
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: api-v2
            port:
              number: 80
  - host: web.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
